<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smile_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/etiqalogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_change_language_background"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/btn_change_language"
        android:textColor="@color/brand_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_change_language"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/smilepartnerlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_change_language" />

    <TextView
        android:id="@+id/text_slogan"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/message_slogan_login"
        android:textColor="@color/black_color"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <RelativeLayout
        android:id="@+id/ln_inputMobilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/text_slogan">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            app:ccpDialog_keyboardAutoPopup="false" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@+id/ccp"
            android:background="@drawable/input_user_pw_background">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/lnImagePhone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/et_phone_number_login"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="@drawable/login_mobile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/et_phone_number_login"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:hint="@string/phone_number_login_hint"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="5"
                app:layout_constraintStart_toEndOf="@+id/lnImagePhone"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ln_input_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/ln_inputMobilePhone"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_user_pw_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_inputMobilePhone">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/lnImageTAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/et_tac_code_login"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/login_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <EditText
            android:id="@+id/et_tac_code_login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:hint="@string/tac_login_hint"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@+id/lnImageTAC"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rl_term_of_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln_input_password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_input_password">

        <TextView
            android:id="@+id/text_term_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/message_term_login"
            android:textColor="@color/black_color"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/rl_term_of_use"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_background"
        android:text="@string/btn_login"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_term_of_use" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login">

        <TextView
            android:id="@+id/tv_forgot_pw_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:text="@string/message_for_got_password"
            android:textColor="@color/black_color"
            android:textSize="12dp"
            app:layout_constraintEnd_toStartOf="@+id/viewLine" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_centerInParent="true"
            android:background="#F7941E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_first_time_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/message_first_time_login"
            android:textColor="@color/black_color"
            android:textSize="12dp"
            app:layout_constraintStart_toEndOf="@+id/viewLine" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imv_finger"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/fingerprint" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
